--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Demo app",
+  "name": "Export to YOLOv8 format",
   "type": "app",
   "version": "2.0.0",
   "description": "Test app",
