--- a/config.json
+++ b/config.json
@@ -1,27 +1,21 @@
 {
-    "name": "Export to YOLOv8 format",
-    "type": "app",
-    "version": "2.0.0",
-    "icon": "https://user-images.githubusercontent.com/115161827/235631477-3c5c5364-3818-4bd7-ba72-341712ddde28.jpg",
-    "icon_cover": true,
-    "poster": "https://user-images.githubusercontent.com/115161827/235631478-31056b4a-4945-4962-aef0-4bd5b7b73956.png",
-    "description": "Transform Supervisely format to YOLOv8 format",
-    "categories": [
-        "images",
-        "export"
-    ],
-    "main_script": "src/main.py",
-    "modal_template": "src/modal.html",
-    "task_location": "workspace_tasks",
-    "isolate": true,
-    "headless": true,
-    "context_menu": {
-        "target": [
-            "images_project",
-            "images_dataset"
-        ],
-        "context_root": "Download as"
-    },
-    "docker_image": "supervisely/import-export:6.72.114",
-    "instance_version": "6.6.7"
+  "name": "Export to YOLOv8 format",
+  "type": "app",
+  "version": "2.0.0",
+  "icon": "https://user-images.githubusercontent.com/115161827/235631477-3c5c5364-3818-4bd7-ba72-341712ddde28.jpg",
+  "icon_cover": true,
+  "poster": "https://user-images.githubusercontent.com/115161827/235631478-31056b4a-4945-4962-aef0-4bd5b7b73956.png",
+  "description": "Transform Supervisely format to YOLOv8 format",
+  "categories": ["images", "export"],
+  "main_script": "src/main.py",
+  "modal_template": "src/modal.html",
+  "task_location": "workspace_tasks",
+  "isolate": true,
+  "headless": true,
+  "context_menu": {
+    "target": ["images_project", "images_dataset"],
+    "context_root": "Download as"
+  },
+  "docker_image": "supervisely/import-export:6.72.182",
+  "min_instance_version": "6.8.48"
 }
