Nested datasets and shift to new engine.

--- a/local.env
+++ b/local.env
@@ -1,9 +1,3 @@
-PYTHONUNBUFFERED=1
-
-context.teamId=435
-context.workspaceId=683
-modal.state.slyProjectId=20600
-
-DEBUG_APP_DIR="debug/app_data/"
-DEBUG_CACHE_DIR="debug/app_cache"
-LOG_LEVEL="debug"
+TEAM_ID=448
+WORKSPACE_ID=690
+PROJECT_ID=35637
