--- a/local.env
+++ b/local.env
@@ -1,3 +1,6 @@
-TEAM_ID=448
-WORKSPACE_ID=690
-PROJECT_ID=35637
+TEAM_ID=447
+WORKSPACE_ID=680
+PROJECT_ID=38813
+
+modal.state.taskType=pose
+modal.state.includeVisibility=true
