Fix Cuboid processing

--- a/local.env
+++ b/local.env
@@ -1,6 +1,10 @@
-TEAM_ID=447
-WORKSPACE_ID=680
-PROJECT_ID=38813
+# TEAM_ID=447
+# WORKSPACE_ID=680
+# PROJECT_ID=38813
 
-modal.state.taskType=pose
-modal.state.includeVisibility=true
+TEAM_ID=8
+WORKSPACE_ID=349
+PROJECT_ID=40428
+
+modal.state.taskType="segmentation" # "pose"
+modal.state.includeVisibility=false # true
