--- a/config.json
+++ b/config.json
@@ -26,6 +26,6 @@
     ],
     "context_root": "Download as"
   },
-  "docker_image": "supervisely/import-export:6.73.162",
-  "min_instance_version": "6.11.8"
+  "docker_image": "supervisely/import-export:6.73.209",
+  "instance_version": "6.11.16"
 }
