back to batches, update timer

--- a/local.env
+++ b/local.env
@@ -2,9 +2,13 @@
 # WORKSPACE_ID=680
 # PROJECT_ID=38813
 
-TEAM_ID=8
-WORKSPACE_ID=349
-PROJECT_ID=40428
+# TEAM_ID=8
+# WORKSPACE_ID=349
+# PROJECT_ID=40428
+
+TEAM_ID = 431
+WORKSPACE_ID = 1019
+PROJECT_ID = 40721
 
 modal.state.taskType="segmentation" # "pose"
 modal.state.includeVisibility=false # true
