--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,10 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[json]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.tabSize": 4,
+        "editor.insertSpaces": false,
+        "editor.formatOnSave": true
     },
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
